--- a/pages/project-coffee-trip.html
+++ b/pages/project-coffee-trip.html
@@ -109,7 +109,7 @@
         <section id="summary">
             <div class="section_container">
                 <div class="section_subcontainer left">
-                    <h1 class="title width">Summary</h1>
+                    <h1 class="title width">tl;dr</h1>
                     <div class="gap-16">
                         <h2 class="aboutme-h2">Project</h2>
                         <p class="section_text_p2 w-640">
@@ -378,7 +378,7 @@
                     </div>
                         
                     <div class="grid-container-more">
-                        <a href="/pages/project-MH-brand.html">
+                        <a href="/pages/project-stakeholder-research.html">
                             <div class="card-wrapper">
                                 <svg class="flower_5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 53 53" fill="none">
                                     <path d="M19.1671 20.5361C17.6997 22.3748 16.9167 24.7632 17.1578 27.29C17.3989 29.8168 18.6195 32.014 20.4081 33.5421C15.2414 34.0351 8.29561 33.3494 7.80262 28.1826C7.30964 23.0159 14.0004 21.0291 19.1671 20.5361Z" fill="#3F7B65" fill-opacity="0.54"/>
@@ -406,14 +406,14 @@
                                         class="project-image">
                                         <div class="content">
                                             <div class="contentBx">
-                                                <h1 class="hover-text">Brand identity</span></h1>
+                                                <h1 class="hover-text">Stakeholder Research: Collaboration with UX</span></h1>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </a>
-                        <a href="/pages/project-valentines.html">
+                        <a href="/pages/project-AIVA.html">
                             <div class="card-wrapper">
                                 <svg class="flower_3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 137 138" fill="none">
                                     <path d="M74.1209 67.1593C82.1347 64.9586 89.1061 59.9828 93.7918 53.1193L102.179 40.8337C106.865 33.9703 108.96 25.6655 108.092 17.4006L107.465 11.4363L101.681 13.0244C93.6677 15.2251 86.6963 20.2009 82.0106 27.0644L73.6231 39.35C68.9374 46.2134 66.8421 54.5182 67.7109 62.7831L68.3379 68.7474L74.1209 67.1593Z" fill="#F3C5B2" fill-opacity="0.73"/>
