--- a/pages/project-AIVA.html
+++ b/pages/project-AIVA.html
@@ -126,7 +126,7 @@
                             class="img_mockup_1">
                     </div>
                     <div class="flex gap-24">
-                            <h1 class="title width">Summary</h1>
+                            <h1 class="title width">tl;dr</h1>
                         <div class="gap-16">
                             <h2 class="aboutme-h2">My role</h2>    
                             <p class="section_text_p2 width">
@@ -608,7 +608,7 @@
                                 </div>
                                 
                             </a> 
-                            <a href="/pages/project-MH-brand.html">
+                            <a href="/pages/project-stakeholder-research.html">
                                 <div class="card-wrapper">
                                     <svg class="flower_5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 53 53" fill="none">
                                         <path d="M19.1671 20.5361C17.6997 22.3748 16.9167 24.7632 17.1578 27.29C17.3989 29.8168 18.6195 32.014 20.4081 33.5421C15.2414 34.0351 8.29561 33.3494 7.80262 28.1826C7.30964 23.0159 14.0004 21.0291 19.1671 20.5361Z" fill="#3F7B65" fill-opacity="0.54"/>
@@ -636,7 +636,7 @@
                                             class="project-image">
                                             <div class="content">
                                                 <div class="contentBx">
-                                                    <h1 class="hover-text">Brand identity</span></h1>
+                                                    <h1 class="hover-text">Stakeholder Research: Collaboration with UX</span></h1>
                                                 </div>
                                             </div>
                                         </div>
