--- a/pages/project-stakeholder-research.html
+++ b/pages/project-stakeholder-research.html
@@ -55,7 +55,7 @@
             <div class="password-container">
                 <h2>Protected Page</h2>
                 <p>Please enter the password to access this content</p>
-                <form id="password-form" onsubmit="checkPassword(event)" autocomplete="off" data-form-type="other">
+                <form id="password-form" autocomplete="off" data-form-type="other">
                     <div class="password-input-wrapper">
                         <input 
                             type="text" 
